--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,19 @@ body{
     margin: 0;
     padding: 0;
 }
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+#cabecera{
+    background-color: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: .5em;
+}
 #container{
     width: 70%;
     padding: 1em;
