--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,3 +30,13 @@ body{
 #container h1{
     font-size: 20px;
 }
+
+.footer{
+    background-color: rgb(80, 80, 80);
+    color: white;
+    padding: .5em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-top: 20px;
+    border-top: solid black 3px;
+}
