--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,17 +49,11 @@ body{
     border-top: solid black 3px;
 }
 
-.account{
+.link__account{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.account__img{
+.link__img{
     width: 35px;
-}
-.account__text{
-    text-decoration: none;
-    color: black;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 0.7em;
 }
